Fixed catalog sidebar button text-align

--- a/assets/sass/catalog.scss
+++ b/assets/sass/catalog.scss
@@ -325,6 +325,7 @@
     justify-content: flex-start;
     width: 100%;
     font-weight: $font-weight-medium;
+    text-align: left;
     text-decoration: none;
     border-color: $gray-400;
     color: $body-color;
